--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
         "vue": "^2.6.12",
         "vue-material": "^1.0.0-beta-15",
         "vue-router": "^3.4.6",
-        "vuetify": "^2.3.13"
+        "vuetify": "^2.3.13",
+        "webpack": "^3.6.0",
+        "webpack-bundle-analyzer": "^2.9.0",
+        "webpack-dev-server": "^2.9.1",
+        "webpack-merge": "^4.1.0"
     },
     "devDependencies": {
         "@mdi/font": "^5.5.55",
