--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dependencies": {
         "axios": "^0.20.0",
         "cors": "^2.8.5",
+        "lodash": "^4.17.20",
         "vue": "^2.6.12",
         "vue-material": "^1.0.0-beta-15",
         "vue-router": "^3.4.6",
